Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-3197

qmlproject does not have an "other files" section

    XMLWordPrintable

Details

    • ccab280b21f53

    Description

      1. Open a qmlproject file.
      2. Select "File->New" and add a General/Text File.
      3. Error message appears: "Failed to add one or more files to project ..."

      Similar things happen with GLSL vertex and fragment shaders (.vert and .frag extensions) in creator/mainline. Doing the same thing with a C++ project works fine - it adds the file to the "Other Files" section. Also works fine if a text or shader file is created when no project is open - only qmlproject has an issue.

      The culprit seems to be the lack of "Other Files" support in the qmlproject format. Qt/3D in particular will be introducing lots of "other files" to QML for 3D model formats, shaders, texture cube map formats, and so on.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkohne Kai Köhne
            rweather Rhys Weatherley (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes