QmlProject: Support arbitrary file suffixes

Add new "Files {}" element that supports showing files with arbitrary
endings in the project tree.

This new element is only available in new "QmlProject 1.1" namespace.

Task-number: QTCREATORBUG-3197
Reviewed-by: Thomas Hartmann